[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "anypoint"
authors = [{ name = "deanx", email = "alex@deanx.com.br" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["requests>=2.28.1"]


[project.urls]
Home = "https://github.com/deanx/anypoint-api-python-client/"
